# DataScience-Gen_AI-Agentic_AI-Projects

./: ProjectList.txt
MCP/: End-to-End MCP Project: Smart Order Management System.ipynb
MCP/inventory-mcp-server-master/: create_table.sql  eda.ipynb  p.ipynb
Projects/Agentic-AI/LangChain/: LangChain-Doc1.ipynb
Projects/Agentic-AI/LangGraph/: 1_simple_graph copy 2.ipynb  1_simple_graph copy.ipynb  1_simple_graph.ipynb  2_graph_with_condition.ipynb  3_chatbot.ipynb  4_tool_call.ipynb  5_tool_call_agent.ipynb  6_memory.ipynb  Costco_Auto.ipynb  Costco_AutoAgent.ipynb  general.ipynb
Projects/Agentic-AI/LangGraph/LangGraphWithMcp-weather/: client.py  email-mcp.py  main.py  pyproject.toml  requirements.txt  weather-mcp.py
Projects/FastAPI/FastAPI-Project1/: fastapi-project-1.ipynb  main.py
Projects/LangChain/: LangChain-Basic.ipynb  LangChain-doc-projects.ipynb  LangChain-doc.ipynb  Project-Langchain-Rag.ipynb
Projects/MCP/: mcp-server-get-currency.ipynb
Projects/RAG/: RAG_UPGRADE.ipynb
Projects/inventory-mcp-server-master/: inventory-mcp-server.py  mcp-doc.ipynb
